--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
-	"account.billing": "Nivells i Facturació",
+	"account.billing": "Pagament i subscripció",
 	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no multimèdia",
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
@@ -134,12 +134,13 @@
 	"billing.features.videos": "Vídeos i indexació d'àudio",
 	"billing.features.widget": "Accés al sistema de widgets",
 	"billing.free": "Gratuït",
+	"billing.hour": "hora",
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
 	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.invalid_vat": "VAT ID no vàlid",
 	"billing.month": "Mes",
-	"billing.monthly_estimation": "Cost mensual estimat",
+	"billing.monthly_estimation": "S'estima que el sobreconsum tindrà un cost de",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
 	"billing.not_company": "No soc una empresa",
 	"billing.parameter.files": "Quants documents?",
@@ -177,6 +178,7 @@
 	"billing.success": "Subscripció satisfactòria",
 	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "30 dies de prova",
+	"billing.unit": "unitat",
 	"billing.upgrade": "Actualitzar",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Preus sense IVA",
