--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
-	"account.billing": "Tiers & Billing",
+	"account.billing": "Payment & Subscription",
 	"account.chart_ML_characters": "ML characters",
 	"account.chart_documents": "Non-media documents",
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
@@ -146,12 +146,13 @@
 	"billing.features.videos": "Videos and audio indexing",
 	"billing.features.widget": "Widget system access",
 	"billing.free": "Free",
+	"billing.hour": "hour",
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
 	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.invalid_vat": "Invalid VAT ID",
 	"billing.month": "Month",
-	"billing.monthly_estimation": "Monthly estimated cost",
+	"billing.monthly_estimation": "Overconsumption is estimated to cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.not_company": "I'm not a company",
 	"billing.parameter.files": "How many documents?",
@@ -189,6 +190,7 @@
 	"billing.success": "Successful subscription",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
 	"billing.trial.title": "30 days trial",
+	"billing.unit": "unit",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Prices without VAT",
