--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Añadir usuario",
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
-	"account.billing": "Niveles y Facturación",
+	"account.billing": "Pago y suscripción",
 	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
@@ -134,12 +134,13 @@
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
 	"billing.free": "Gratuito",
+	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
 	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.invalid_vat": "VAT ID no válido",
 	"billing.month": "Mes",
-	"billing.monthly_estimation": "Coste mensual estimado",
+	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.not_company": "No soy una empresa",
 	"billing.parameter.files": "¿Cuántos documentos?",
@@ -177,6 +178,7 @@
 	"billing.success": "Suscripción exitosa",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "30 días de prueba",
+	"billing.unit": "unidad",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Precios sin IVA",
