Ericbrehault/sc 4424/upload service in a decoupled process rebased (#718)
* run express server in electron

* run standalone server in dev mode

* dynamic connectors PoC

* use dropbox from server (WIP)

* Nuclia connector

* rename endpoint

* upload to nuclia

* get api key for nuclia connector

* fix upload

* show server status

* get last modified

* choose local or external server

* choose permanent sync or not

* do not read/write connector file permanently

* run http in fork

* use regular fetch for better error management

* get folders

* sync folders

* OneDrive

* use refresh token

* permanent sync with onedrive

* log history

* fix creation

* clean up and hide dynamic connectors

* allow to delete a source

* fix home path with local server

* fix tests

* save on SIGTERM

* restart permanent collection when changing sources

* improve history layout

* bump version for release

* review fixes

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -2,6 +2,8 @@
 	"generic.cancel": "Cancel·lar",
 	"generic.logout": "Sortir",
 	"generic.save_continue": "Desar i continuar",
+	"generic.server_down": "El servidor de sincronització està inactiu",
+	"generic.server_up": "El servidor de sincronització està activat",
 	"generic.switch_account": "Canviar de compte",
 	"generic.upload": "Pujar",
 	"history.active": "Pujades actives",
@@ -26,10 +28,17 @@
 	"upload.select.all": "Seleccionar tot",
 	"upload.select.description": "Selecciona les dades que vols pujar",
 	"upload.select.search": "Cerca",
+	"upload.server.external": "Servidor extern",
+	"upload.server.external-button": "Utilitzeu un servidor extern",
+	"upload.server.local": "Servidor local",
+	"upload.server.local-button": "Utilitzeu el servidor local",
+	"upload.server.title": "Connecteu-vos al servidor de sincronització",
+	"upload.server.url": "URL del servidor",
+	"upload.source.confirm-delete": "Realment voleu suprimir aquesta font?",
 	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
 	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
-	"upload.source.quick_access": "Desar les credencials d'autenticació per futures pujades des del mateix origen.",
-	"upload.source.quick_access_name": "Anomena l'accés directe",
+	"upload.source.permanent-sync": "Sincronització permanent",
+	"upload.source.quick_access_name": "Anomena la teva font",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Escollir dades",
