--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -2,6 +2,8 @@
 	"generic.cancel": "Cancel",
 	"generic.logout": "Log out",
 	"generic.save_continue": "Save & Continue",
+	"generic.server_down": "Sync server is down",
+	"generic.server_up": "Sync server is up",
 	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
 	"history.active": "Active uploads",
@@ -26,10 +28,17 @@
 	"upload.select.all": "Select all",
 	"upload.select.description": "Select the data you want to upload",
 	"upload.select.search": "Search",
+	"upload.server.external": "External server",
+	"upload.server.external-button": "Use external server",
+	"upload.server.local": "Local server",
+	"upload.server.local-button": "Use local server",
+	"upload.server.title": "Connect to sync server",
+	"upload.server.url": "Server URL",
+	"upload.source.confirm-delete": "Do you really want to delete this source?",
 	"upload.source.description": "Choose source for uploads",
 	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
-	"upload.source.quick_access": "Save the login credentials for future uploads from the same source.",
-	"upload.source.quick_access_name": "Name your quick access",
+	"upload.source.permanent-sync": "Permanent synchronization",
+	"upload.source.quick_access_name": "Name your source",
 	"upload.source.title": "Source integration",
 	"upload.steps.configure": "Configure",
 	"upload.steps.data": "Choose data",
