--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -2,6 +2,8 @@
 	"generic.cancel": "Annuler",
 	"generic.logout": "Déconnexion",
 	"generic.save_continue": "Enregistrer et continuer",
+	"generic.server_down": "Le serveur de synchronisation est en panne",
+	"generic.server_up": "Le serveur de synchronisation est opérationnel",
 	"generic.switch_account": "Changer de compte",
 	"generic.upload": "Télécharger",
 	"history.active": "Téléchargements actifs",
@@ -26,10 +28,17 @@
 	"upload.select.all": "Sélectionner tout",
 	"upload.select.description": "Sélectionnez les données que vous souhaitez télécharger",
 	"upload.select.search": "Rechercher",
+	"upload.server.external": "Serveur externe",
+	"upload.server.external-button": "Utiliser un serveur externe",
+	"upload.server.local": "Serveur local",
+	"upload.server.local-button": "Utiliser le serveur local",
+	"upload.server.title": "Se connecter au serveur de synchronisation",
+	"upload.server.url": "URL du serveur",
+	"upload.source.confirm-delete": "Voulez-vous vraiment supprimer cette source ?",
 	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
 	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
-	"upload.source.quick_access": "Enregistrez les informations de connexion pour les futurs téléchargements à partir de la même source.",
-	"upload.source.quick_access_name": "Nommez votre raccourci",
+	"upload.source.permanent-sync": "Synchronisation permanente",
+	"upload.source.quick_access_name": "Nommez votre source",
 	"upload.source.title": "Source d'origine",
 	"upload.steps.configure": "Configurer",
 	"upload.steps.data": "Choisir les données",
