--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -2,6 +2,8 @@
 	"generic.cancel": "Cancelar",
 	"generic.logout": "Salir",
 	"generic.save_continue": "Guardar y continuar",
+	"generic.server_down": "El servidor de sincronización está inactivo",
+	"generic.server_up": "El servidor de sincronización está activo",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.upload": "Subir",
 	"history.active": "Subidas activas",
@@ -26,10 +28,17 @@
 	"upload.select.all": "Seleccionar todo",
 	"upload.select.description": "Selecciona los datos que quieres subir",
 	"upload.select.search": "Busca",
+	"upload.server.external": "Servidor externo",
+	"upload.server.external-button": "Usar servidor externo",
+	"upload.server.local": "Servidor local",
+	"upload.server.local-button": "Usar servidor local",
+	"upload.server.title": "Conectarse al servidor de sincronización",
+	"upload.server.url": "URL del servidor",
+	"upload.source.confirm-delete": "¿Realmente desea eliminar esta fuente?",
 	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
 	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
-	"upload.source.quick_access": "Guardar las credenciales de autenticación para futuras subidas desde el mismo origen.",
-	"upload.source.quick_access_name": "Nombra el acceso directo",
+	"upload.source.permanent-sync": "Sincronización permanente",
+	"upload.source.quick_access_name": "Nombra tu fuente",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Elegir datos",
