Add consumption page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -157,6 +157,7 @@
 	"billing.not_company": "I'm not a company",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.media": "How many hours of videos/audios?",
+	"billing.parameter.paragraphs": "How many extracted paragraphs?",
 	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
 	"billing.parameter.training-hours": "How many hours of training?",
@@ -192,6 +193,12 @@
 	"billing.trial.title": "30 days trial",
 	"billing.unit": "unit",
 	"billing.upgrade": "Upgrade",
+	"billing.usage.consumables": "Consumables",
+	"billing.usage.consumption": "Consumption",
+	"billing.usage.over_consume": "Over consume",
+	"billing.usage.over_cost": "Over cost",
+	"billing.usage.tier_included": "Tier included",
+	"billing.usage.title": "Overconsumption cost",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Prices without VAT",
 	"confirm.delete_body": "Delete resource",
