--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -145,6 +145,7 @@
 	"billing.not_company": "No soy una empresa",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
+	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.parameter.training-hours": "¿Cuántas horas de entrenamientos?",
@@ -180,6 +181,12 @@
 	"billing.trial.title": "30 días de prueba",
 	"billing.unit": "unidad",
 	"billing.upgrade": "Actualizar",
+	"billing.usage.consumables": "Consumibles",
+	"billing.usage.consumption": "Consumo",
+	"billing.usage.over_consume": "Sobreconsumo",
+	"billing.usage.over_cost": "Sobrecoste",
+	"billing.usage.tier_included": "Incluido en el nivel",
+	"billing.usage.title": "Coste del sobreconsumo",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Precios sin IVA",
 	"confirm.delete_body": "Eliminar recurso",
