--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -145,6 +145,7 @@
 	"billing.not_company": "No soc una empresa",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
+	"billing.parameter.paragraphs": "Quants paràgrafs extrets?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
 	"billing.parameter.training-hours": "Quantes hores d'entrenament?",
@@ -180,6 +181,12 @@
 	"billing.trial.title": "30 dies de prova",
 	"billing.unit": "unitat",
 	"billing.upgrade": "Actualitzar",
+	"billing.usage.consumables": "Consumibles",
+	"billing.usage.consumption": "Consum",
+	"billing.usage.over_consume": "Sobreconsum",
+	"billing.usage.over_cost": "Sobrecost",
+	"billing.usage.tier_included": "Inclòs al nivell",
+	"billing.usage.title": "Cost del sobreconsum",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Preus sense IVA",
 	"confirm.delete_body": "Eliminar recurs",
