Add call to payment_methods endpoint and improve error messages

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -102,7 +102,6 @@
 	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
 	"billing.card_details": "Detalls de la targeta",
-	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
 	"billing.company": "Raó social de l'empresa",
@@ -138,6 +137,8 @@
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
 	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
+	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
+	"billing.invalid_card": "No hem pogut validar la teva targeta.",
 	"billing.invalid_vat": "VAT ID no vàlid",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "S'estima que el sobreconsum tindrà un cost de",
