--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -114,7 +114,6 @@
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.card_details": "Card details",
-	"billing.card_error": "We were unable to validate your card.",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
 	"billing.company": "Company legal name",
@@ -150,6 +149,8 @@
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
 	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
+	"billing.invalid_address": "The address provided is not valid",
+	"billing.invalid_card": "We were unable to validate your card.",
 	"billing.invalid_vat": "Invalid VAT ID",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Overconsumption is estimated to cost",
