--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -102,7 +102,6 @@
 	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.card_details": "Detalles de la tarjeta",
-	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
 	"billing.company": "Razon social de la empresa",
@@ -138,6 +137,8 @@
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
 	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
+	"billing.invalid_address": "La dirección proporcionada no es válida",
+	"billing.invalid_card": "No pudimos validar tu tarjeta.",
 	"billing.invalid_vat": "VAT ID no válido",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
