[sc-5255] Payment improvements (#727)
* Recover budget form text

* Show error when VAT ID is not valid

* Display unit prices in budget calculator

* Change texts

* Add consumption page

* Add chat to payment pages

* Add conditional redirect

* Add call to payment_methods endpoint and improve error messages

* Fix

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
-	"account.billing": "Nivells i Facturació",
+	"account.billing": "Pagament i subscripció",
 	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no multimèdia",
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
@@ -100,10 +100,8 @@
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
-	"billing.budget_description": "Per evitar despeses excessives i càrrecs inesperats, recomanem establir un límit mensual.",
-	"billing.budget_note": "* Tingueu en compte que, de vegades, un procés que s'inicia just abans d'arribar al seu límit encara es pot completar, la qual cosa pot provocar un lleuger augment del límit establert.",
+	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
 	"billing.card_details": "Detalls de la targeta",
-	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
 	"billing.company": "Raó social de l'empresa",
@@ -135,15 +133,20 @@
 	"billing.features.videos": "Vídeos i indexació d'àudio",
 	"billing.features.widget": "Accés al sistema de widgets",
 	"billing.free": "Gratuït",
+	"billing.hour": "hora",
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
 	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
+	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
+	"billing.invalid_card": "No hem pogut validar la teva targeta.",
+	"billing.invalid_vat": "VAT ID no vàlid",
 	"billing.month": "Mes",
-	"billing.monthly_estimation": "Cost mensual estimat",
+	"billing.monthly_estimation": "S'estima que el sobreconsum tindrà un cost de",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
 	"billing.not_company": "No soc una empresa",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
+	"billing.parameter.paragraphs": "Quants paràgrafs extrets?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
 	"billing.parameter.training-hours": "Quantes hores d'entrenament?",
@@ -177,7 +180,14 @@
 	"billing.success": "Subscripció satisfactòria",
 	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "30 dies de prova",
+	"billing.unit": "unitat",
 	"billing.upgrade": "Actualitzar",
+	"billing.usage.consumables": "Consumibles",
+	"billing.usage.consumption": "Consum",
+	"billing.usage.over_consume": "Sobreconsum",
+	"billing.usage.over_cost": "Sobrecost",
+	"billing.usage.tier_included": "Inclòs al nivell",
+	"billing.usage.title": "Cost del sobreconsum",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Preus sense IVA",
 	"confirm.delete_body": "Eliminar recurs",
