--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
-	"account.billing": "Tiers & Billing",
+	"account.billing": "Payment & Subscription",
 	"account.chart_ML_characters": "ML characters",
 	"account.chart_documents": "Non-media documents",
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
@@ -112,10 +112,8 @@
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
-	"billing.budget_description": "To avoid overspending an unexpected charges, we recommend setting a monthly economic limit.",
-	"billing.budget_note": "* Please note that sometimes a process that is started just before reaching its limit may still be completed, which could lead to a slight increase in the set limit.",
+	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.card_details": "Card details",
-	"billing.card_error": "We were unable to validate your card.",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
 	"billing.company": "Company legal name",
@@ -147,15 +145,20 @@
 	"billing.features.videos": "Videos and audio indexing",
 	"billing.features.widget": "Widget system access",
 	"billing.free": "Free",
+	"billing.hour": "hour",
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
 	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
+	"billing.invalid_address": "The address provided is not valid",
+	"billing.invalid_card": "We were unable to validate your card.",
+	"billing.invalid_vat": "Invalid VAT ID",
 	"billing.month": "Month",
-	"billing.monthly_estimation": "Monthly estimated cost",
+	"billing.monthly_estimation": "Overconsumption is estimated to cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.not_company": "I'm not a company",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.media": "How many hours of videos/audios?",
+	"billing.parameter.paragraphs": "How many extracted paragraphs?",
 	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
 	"billing.parameter.training-hours": "How many hours of training?",
@@ -189,7 +192,14 @@
 	"billing.success": "Successful subscription",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
 	"billing.trial.title": "30 days trial",
+	"billing.unit": "unit",
 	"billing.upgrade": "Upgrade",
+	"billing.usage.consumables": "Consumables",
+	"billing.usage.consumption": "Consumption",
+	"billing.usage.over_consume": "Over consume",
+	"billing.usage.over_cost": "Over cost",
+	"billing.usage.tier_included": "Tier included",
+	"billing.usage.title": "Overconsumption cost",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Prices without VAT",
 	"confirm.delete_body": "Delete resource",
