--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Añadir usuario",
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
-	"account.billing": "Niveles y Facturación",
+	"account.billing": "Pago y suscripción",
 	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
@@ -100,10 +100,8 @@
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
-	"billing.budget_description": "Para evitar gastos excesivos y cargos inesperados, recomendamos establecer un límite mensual.",
-	"billing.budget_note": "* Tenga en cuenta que, a veces, un proceso que se inicia justo antes de alcanzar su límite aún puede completarse, lo que podría provocar un ligero aumento en el límite establecido.",
+	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.card_details": "Detalles de la tarjeta",
-	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
 	"billing.company": "Razon social de la empresa",
@@ -135,15 +133,20 @@
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
 	"billing.free": "Gratuito",
+	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
 	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
+	"billing.invalid_address": "La dirección proporcionada no es válida",
+	"billing.invalid_card": "No pudimos validar tu tarjeta.",
+	"billing.invalid_vat": "VAT ID no válido",
 	"billing.month": "Mes",
-	"billing.monthly_estimation": "Coste mensual estimado",
+	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.not_company": "No soy una empresa",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
+	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.parameter.training-hours": "¿Cuántas horas de entrenamientos?",
@@ -177,7 +180,14 @@
 	"billing.success": "Suscripción exitosa",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "30 días de prueba",
+	"billing.unit": "unidad",
 	"billing.upgrade": "Actualizar",
+	"billing.usage.consumables": "Consumibles",
+	"billing.usage.consumption": "Consumo",
+	"billing.usage.over_consume": "Sobreconsumo",
+	"billing.usage.over_cost": "Sobrecoste",
+	"billing.usage.tier_included": "Incluido en el nivel",
+	"billing.usage.title": "Coste del sobreconsumo",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Precios sin IVA",
 	"confirm.delete_body": "Eliminar recurso",
