Refactor usage table

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -139,7 +139,7 @@
 	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
 	"billing.invalid_card": "No hem pogut validar la teva targeta.",
-	"billing.invalid_vat": "VAT ID no vàlid",
+	"billing.invalid_vat": "Si us plau, afegiu el codi del país. Ex: ESB000000N",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "S'estima que el sobreconsum tindrà un cost de",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
@@ -184,6 +184,7 @@
 	"billing.upgrade": "Actualitzar",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consum",
+	"billing.usage.interval": "Cost corresponent al consum des de {{from}} a {{to}}",
 	"billing.usage.over_consume": "Sobreconsum",
 	"billing.usage.over_cost": "Sobrecost",
 	"billing.usage.tier_included": "Inclòs al nivell",
