--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -151,7 +151,7 @@
 	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.invalid_address": "The address provided is not valid",
 	"billing.invalid_card": "We were unable to validate your card.",
-	"billing.invalid_vat": "Invalid VAT ID",
+	"billing.invalid_vat": "Please add the country code. e.g: ESB000000N",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Overconsumption is estimated to cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
@@ -196,6 +196,7 @@
 	"billing.upgrade": "Upgrade",
 	"billing.usage.consumables": "Consumables",
 	"billing.usage.consumption": "Consumption",
+	"billing.usage.interval": "Cost corresponding to the consumption from {{from}} to {{to}}",
 	"billing.usage.over_consume": "Over consume",
 	"billing.usage.over_cost": "Over cost",
 	"billing.usage.tier_included": "Tier included",
