--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -139,7 +139,7 @@
 	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.invalid_address": "La dirección proporcionada no es válida",
 	"billing.invalid_card": "No pudimos validar tu tarjeta.",
-	"billing.invalid_vat": "VAT ID no válido",
+	"billing.invalid_vat": "Por favor agregue el código de país. Por ejemplo: ESB000000N",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
@@ -184,6 +184,7 @@
 	"billing.upgrade": "Actualizar",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consumo",
+	"billing.usage.interval": "Coste correspondiente al consumo de {{from }} a {{to}}",
 	"billing.usage.over_consume": "Sobreconsumo",
 	"billing.usage.over_cost": "Sobrecoste",
 	"billing.usage.tier_included": "Incluido en el nivel",
