Add unsubscribe button

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -101,6 +101,8 @@
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
+	"billing.cancel_subscription": "Cancel·la subscripció",
+	"billing.cancel_subscription.title": "Cancel·la la teva subscripció",
 	"billing.card_details": "Detalls de la targeta",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
@@ -108,8 +110,8 @@
 	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacte",
-	"billing.cost_per_usage": "Cost per ús",
-	"billing.cost_per_usage.description": "Si supereu els límits, s'aplicarà el cost per ús.",
+	"billing.cost_over_limits": "Cost al superar els límits",
+	"billing.cost_over_limits.description": "Si supereu els límits del nivell de pagament, s'aplicarà el cost per ús.",
 	"billing.country": "País",
 	"billing.custom_plan": "Pla personalitzat",
 	"billing.email": "Factures enviades a",
