--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -113,6 +113,9 @@
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.cancel_subscription": "Cancel subscription",
+	"billing.cancel_subscription.description": "Sometimes you just need to call it quits. We get it.",
+	"billing.cancel_subscription.title": "Cancel your subscription",
 	"billing.card_details": "Card details",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
@@ -120,8 +123,8 @@
 	"billing.company_address": "Company address",
 	"billing.contact": "Contact",
 	"billing.contact_name": "Contact name",
-	"billing.cost_per_usage": "Cost-per-usage",
-	"billing.cost_per_usage.description": "If you exceed the limits, cost per usage will be applied.",
+	"billing.cost_over_limits": "Cost over limits",
+	"billing.cost_over_limits.description": "If you exceed the limits on the payment tiers, the cost per usage will be applied",
 	"billing.country": "Country",
 	"billing.custom_plan": "Custom plan",
 	"billing.email": "Invoices sent to",
