--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -101,6 +101,8 @@
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
+	"billing.cancel_subscription": "Cancela suscripción",
+	"billing.cancel_subscription.title": "Cancela tu suscripción",
 	"billing.card_details": "Detalles de la tarjeta",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
@@ -108,8 +110,8 @@
 	"billing.company_address": "Dirección de la empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacto",
-	"billing.cost_per_usage": "Coste por uso",
-	"billing.cost_per_usage.description": "Si excede los límites, se aplicará el costo por uso.",
+	"billing.cost_over_limits": "Coste al exceder los límites",
+	"billing.cost_over_limits.description": "Si excede los límites del nivel de pago, se aplicará el costo por uso.",
 	"billing.country": "País",
 	"billing.custom_plan": "Plan personalizado",
 	"billing.email": "Facturas enviadas a",
